# fastapi-kafka-docker-aws-s3-bucket-hugging-face

./: .env  CreateWeekdayFiles.ps1  README.md  docker-compose.yml  pyproject.toml
docker/python/: Dockerfile
docker/router/: Dockerfile
docker/router/etc/nginx/certs/: cert.pem  fullchain.pem  privkey.pem
docker/router/etc/nginx/conf.d/: default.conf
migrations/: env.py
src/: router.py  upload_images.py
src/core/: broadcaster.py  events.py
src/core/adapty/: __init__.py  client.py  exceptions.py
src/core/adapty/schemas/: __init__.py  access_level.py  base.py  non_subscription.py  profile.py  subscription.py
src/core/auth/: __init__.py  base.py
src/core/db/: __init__.py  base.py  db.py
src/core/exceptions/: __init__.py  handlers.py
src/core/kafka/: __init__.py  exceptions.py  schemas.py
src/core/schemas/: __init__.py  base.py  errors.py  status.py
src/core/settings/: __init__.py  base.py  database.py  fastapi.py  logger.py
src/media/: client.py  exceptions.py  models.py  schemas.py  services.py  views.py
src/messenger/: crud.py  exceptions.py  models.py  services.py  views.py
src/messenger/managers/: __init__.py  connection.py
src/messenger/types/: __init__.py  chat.py  dialog.py  message.py  role.py  websocket.py
